# voip-asterisk

config/: extensions.conf  rtp.conf  sip.conf
doc/: install.md  orangepi.md
linphone/: config  const.py  gpio.py  install.sh  main_gpio.py  main_gpio_conference.py  softphone.py  voip.service
linphone/call_direct/: main_gpio.py  softphone.py
linphone/test/: basic.py  main_serial.py  pySerial.py
orangePiZero/: readme.md
socket/: audio.py  clientSocket.py  const.py  gpio.py
waveOverIP/: App.deb  CMakeLists.txt  README.md  blink.c  wavePlayUDP.cpp  waveSendUDP.cpp
waveOverIP/App/DEBIAN/: control  postinst
waveOverIP/App/lib/systemd/system/: audio_play_udp.service  audio_send_udp.service
